--- a/HW2/app/src/main/res/layout/main_view_layout.xml
+++ b/HW2/app/src/main/res/layout/main_view_layout.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/Start"
+        android:text="@string/start"
         android:textAllCaps="false"/>
 
     <Button
