--- a/HW2/app/src/main/res/layout/game_view_layout.xml
+++ b/HW2/app/src/main/res/layout/game_view_layout.xml
@@ -12,14 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="96dp"
         android:layout_marginTop="18dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <GridView
         android:id="@+id/gridView"
         android:layout_width="0dp"
-        android:layout_height="249dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="11dp"
         android:columnWidth="90dp"
         android:gravity="center"
@@ -30,13 +30,14 @@
         android:verticalSpacing="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/gridViewBlank2" />
 
     <Button
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="82dp"
         android:text="Save"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,5 +54,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/save" />
+
+    <GridView
+        android:id="@+id/gridViewBlank2"
+        android:layout_width="0dp"
+        android:layout_height="190dp"
+        android:layout_marginBottom="24dp"
+        android:numColumns="7"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
